--- a/index-beef.html
+++ b/index-beef.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 <head>
@@ -58,7 +58,7 @@
                                     Urban Bourbon Bliss Ribeye
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
@@ -68,7 +68,7 @@
                                     Artisanal Truffle Tango Sirloin
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
@@ -78,7 +78,7 @@
                                     Smoked Paprika Perfection
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
@@ -88,12 +88,12 @@
                                     Tandoori Temptation Tender
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 </ul>
 <div class="cart-mini-total">
 <div class="cart-total">
-<span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span class="currency">$</span>940.00</span></span>
+<span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </div>
 </div>
 <div class="cart-button">
@@ -214,7 +214,7 @@
 <div class="row">
 <div class="col-lg-12">
 <div class="hero-content text-center">
-<h1 class="wow fadeInDown" data-wow-delay=".6s">Let’s Eat</h1>
+<h1 class="wow fadeInDown" data-wow-delay=".6s">Letâ€™s Eat</h1>
 </div>
 <div class="hero-image text-center">
 <img alt="Hero Beef" class="wow fadeInUp" src="assets/images/home-beef/hero/hero-beef1.png"/>
@@ -1183,7 +1183,7 @@
 <div class="copyright-area text-center">
 <div class="container">
 <div class="copyright-text">
-<p>© 2024 All rights reserved design by Pixelfit</p>
+<p>Â© 2024 All rights reserved design by Pixelfit</p>
 </div>
 </div>
 </div>
@@ -1214,3 +1214,4 @@
 <script src="assets/js/theme.js"></script>
 </body>
 </html>
+
