--- a/index-burger.html
+++ b/index-burger.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 <head>
@@ -56,7 +56,7 @@
                                     Urban Bourbon Bliss Ribeye
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-burger.html"><i class="far fa-trash-alt"></i></a>
@@ -66,7 +66,7 @@
                                     Artisanal Truffle Tango Sirloin
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-burger.html"><i class="far fa-trash-alt"></i></a>
@@ -76,7 +76,7 @@
                                     Smoked Paprika Perfection
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-burger.html"><i class="far fa-trash-alt"></i></a>
@@ -86,12 +86,12 @@
                                     Tandoori Temptation Tender
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 </ul>
 <div class="cart-mini-total">
 <div class="cart-total">
-<span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span class="currency">$</span>940.00</span></span>
+<span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </div>
 </div>
 <div class="cart-button">
@@ -310,7 +310,7 @@
 <div class="banner-img"><img alt="" src="assets/images/bg/bn-img-3.png"/></div>
 <div class="banner-content">
 <h2>Cheese Burger</h2>
-<p>Grilled beef, melted cheese, bun—classic American 
+<p>Grilled beef, melted cheese, bunâ€”classic American 
 
                                             cheeseburger delightfully satisfies taste buds.</p>
 <p class="price"><span class="currency">$</span>79.00</p>
@@ -881,7 +881,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                     each image.</p>
 <ul class="ratings rating-four">
@@ -905,7 +905,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                     each image.</p>
 <ul class="ratings rating-four">
@@ -929,7 +929,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                     each image.</p>
 <ul class="ratings rating-four">
@@ -1201,7 +1201,7 @@
 <div class="copyright-area text-center">
 <div class="container">
 <div class="copyright-text">
-<p>© 2024 All rights reserved design by Pixelfit</p>
+<p>Â© 2024 All rights reserved design by Pixelfit</p>
 </div>
 </div>
 </div>
@@ -1230,3 +1230,4 @@
 <script src="assets/js/theme.js"></script>
 </body>
 </html>
+
