--- a/index-pizza.html
+++ b/index-pizza.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 <head>
@@ -56,7 +56,7 @@
                                     Urban Bourbon Bliss Ribeye
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
@@ -66,7 +66,7 @@
                                     Artisanal Truffle Tango Sirloin
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
@@ -76,7 +76,7 @@
                                     Smoked Paprika Perfection
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
@@ -86,12 +86,12 @@
                                     Tandoori Temptation Tender
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 </ul>
 <div class="cart-mini-total">
 <div class="cart-total">
-<span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span class="currency">$</span>940.00</span></span>
+<span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </div>
 </div>
 <div class="cart-button">
@@ -212,7 +212,7 @@
 <h1 class="wow fadeInDown" data-wow-delay=".5s">Cheese
 
                                     Delight Pizza</h1>
-<p class="wow fadeInDown" data-wow-delay=".6s">Savor the perfection of our Italian Cheese Pizza—crispy golden crust, premium mozzarella, Parmesan, and ricotta...</p>
+<p class="wow fadeInDown" data-wow-delay=".6s">Savor the perfection of our Italian Cheese Pizzaâ€”crispy golden crust, premium mozzarella, Parmesan, and ricotta...</p>
 <div class="hero-button wow fadeInDown" data-wow-delay=".7s">
 <a class="theme-btn style-one" href="index-2.html">Order Now</a>
 </div>
@@ -274,7 +274,7 @@
 <div class="banner-content">
 <span class="sub-title">Premium Berger</span>
 <h3>Italian burger</h3>
-<p>Experience Italy on a bun with our Italian burger—juicy, seasoned beef patty, melted mozzarella.</p>
+<p>Experience Italy on a bun with our Italian burgerâ€”juicy, seasoned beef patty, melted mozzarella.</p>
 <a class="theme-btn style-one" href="index-3.html">Make a Booking</a>
 </div>
 </div>
@@ -897,7 +897,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                         each image.</p>
 <ul class="ratings rating-four">
@@ -921,7 +921,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                         each image.</p>
 <ul class="ratings rating-four">
@@ -945,7 +945,7 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
 
                                         each image.</p>
 <ul class="ratings rating-four">
@@ -971,7 +971,7 @@
 <div class="section-title section-title-left mb-50 wow fadeInLeft">
 <span class="sub-title">Explore Gallery</span>
 <h2>Our Gallery</h2>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations, each image.</p>
+<p>Explore 'Our Gallery'â€”a visual symphony of delectable pizzas. Feast your eyes on our culinary creations, each image.</p>
 </div>
 </div>
 <div class="col-lg-5">
@@ -1155,7 +1155,7 @@
 <div class="copyright-area text-center">
 <div class="container">
 <div class="copyright-text">
-<p>© 2024 All rights reserved design by Pixelfit</p>
+<p>Â© 2024 All rights reserved design by Pixelfit</p>
 </div>
 </div>
 </div>
@@ -1184,3 +1184,4 @@
 <script src="assets/js/theme.js"></script>
 </body>
 </html>
+
