--- a/blog-details.html
+++ b/blog-details.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 
 <html lang="zxx">
@@ -57,7 +57,7 @@
                                     Urban Bourbon Bliss Ribeye
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="blog-details.html"><i class="far fa-trash-alt"></i></a>
@@ -67,7 +67,7 @@
                                     Artisanal Truffle Tango Sirloin
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="blog-details.html"><i class="far fa-trash-alt"></i></a>
@@ -77,7 +77,7 @@
                                     Smoked Paprika Perfection
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="blog-details.html"><i class="far fa-trash-alt"></i></a>
@@ -87,12 +87,12 @@
                                     Tandoori Temptation Tender
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 </ul>
 <div class="cart-mini-total">
 <div class="cart-total">
-<span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span class="currency">$</span>940.00</span></span>
+<span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </div>
 </div>
 <div class="cart-button">
@@ -523,7 +523,7 @@
 <div class="copyright-area text-center">
 <div class="container">
 <div class="copyright-text">
-<p>© 2024 All rights reserved design by Pixelfit</p>
+<p>Â© 2024 All rights reserved design by Pixelfit</p>
 </div>
 </div>
 </div>
@@ -552,3 +552,4 @@
 <script src="assets/js/theme.js"></script>
 </body>
 </html>
+
