--- a/chefs.html
+++ b/chefs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 <head>
@@ -56,7 +56,7 @@
                                     Urban Bourbon Bliss Ribeye
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="chefs.html"><i class="far fa-trash-alt"></i></a>
@@ -66,7 +66,7 @@
                                     Artisanal Truffle Tango Sirloin
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="chefs.html"><i class="far fa-trash-alt"></i></a>
@@ -76,7 +76,7 @@
                                     Smoked Paprika Perfection
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="chefs.html"><i class="far fa-trash-alt"></i></a>
@@ -86,12 +86,12 @@
                                     Tandoori Temptation Tender
 
                                 </a>
-<span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+<span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </li>
 </ul>
 <div class="cart-mini-total">
 <div class="cart-total">
-<span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span class="currency">$</span>940.00</span></span>
+<span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span class="currency">$</span>940.00</span></span>
 </div>
 </div>
 <div class="cart-button">
@@ -421,7 +421,7 @@
 <div class="copyright-area text-center">
 <div class="container">
 <div class="copyright-text">
-<p>© 2024 All rights reserved design by Pixelfit</p>
+<p>Â© 2024 All rights reserved design by Pixelfit</p>
 </div>
 </div>
 </div>
@@ -450,3 +450,4 @@
 <script src="assets/js/theme.js"></script>
 </body>
 </html>
+
