--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 
@@ -60,7 +60,7 @@
                                 Urban Bourbon Bliss Ribeye
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="faq.html"><i class="far fa-trash-alt"></i></a>
@@ -70,7 +70,7 @@
                                 Artisanal Truffle Tango Sirloin
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="faq.html"><i class="far fa-trash-alt"></i></a>
@@ -80,7 +80,7 @@
                                 Smoked Paprika Perfection
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="faq.html"><i class="far fa-trash-alt"></i></a>
@@ -90,12 +90,12 @@
                                 Tandoori Temptation Tender
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                     </ul>
                     <div class="cart-mini-total">
                         <div class="cart-total">
-                            <span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span
+                            <span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span
                                         class="currency">$</span>940.00</span></span>
                         </div>
                     </div>
@@ -131,9 +131,9 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">Início</a>
+                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
                                     </li>
-                                    <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
+                                    <li class="menu-item has-children"><a href="menu-v2.html">CardÃ¡pio</a>
                                         <!-- <ul class="sub-menu"> -->
                                         <!-- <li><a href="menu-v1.html">Menu List One</a></li> -->
                                         <!-- <li><a href="menu-v2.html">Menu List Two</a></li> -->
@@ -143,8 +143,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nós</a></li>
-                                            <li><a href="history.html">Nossa História</a></li>
+                                            <li><a href="about.html">Sobre nÃ³s</a></li>
+                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -196,10 +196,10 @@
                     <div class="col-lg-12">
                         <!--=== Page Banner Content ===-->
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Perguntas frequêntes</h1>
+                            <h1 class="page-title">Perguntas frequÃªntes</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">Início</a></li>
-                                <li class="active">Perguntas frequêntes</li>
+                                <li><a href="index.html">InÃ­cio</a></li>
+                                <li class="active">Perguntas frequÃªntes</li>
                             </ul>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                                 <h6 aria-expanded="false" class="accordion-title" data-bs-target="#collapse3"
                                     data-bs-toggle="collapse">
 
-                                    What’re The Stages of Construction Project?
+                                    Whatâ€™re The Stages of Construction Project?
 
                                 </h6>
                             </div>
@@ -344,7 +344,7 @@
                                 <h6 aria-expanded="true" class="accordion-title" data-bs-target="#collapse7"
                                     data-bs-toggle="collapse">
 
-                                    What’re The Stages of Construction Project?
+                                    Whatâ€™re The Stages of Construction Project?
 
                                 </h6>
                             </div>
@@ -437,13 +437,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Links rápidos</h4>
+                                <h4 class="widget-title">Links rÃ¡pidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">Cardápio</a></li>
-                                    <li><a href="index.html">Sobre</a></li>
-                                    <li><a href="index.html">Galeria</a></li>
-                                    <li><a href="index.html">Contato</a></li>
+                                    <li><a href="index.html">CardÃ¡pio</a></li>
+                                    <li><a href="about.html">Sobre</a></li>
+                                    <li><a href="gallery.html">Galeria</a></li>
+                                    <li><a href="contact.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -452,11 +452,11 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Horários de atendimento</h4>
+                                <h4 class="widget-title">HorÃ¡rios de atendimento</h4>
                                 <ul class="opening-schedule">
                                     <li>Domingo<span>: 06.00pm - 12.00am </span></li>
                                     <li>Segunda: <span class="of-close"> Fechado </span></li>
-                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
+                                    <li>TerÃ§a<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quarta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quinta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
@@ -471,7 +471,7 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
+                    <p>Â© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
     </footer>
@@ -503,3 +503,4 @@
 </body>
 
 </html>
+
