--- a/menu-v2.html
+++ b/menu-v2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zxx">
 
@@ -9,7 +9,7 @@
     <meta content="Insurance, Health, Agency" name="description" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
     <!--====== Title ======-->
-    <title>Pizzaria Lunamar - Cardápio</title>
+    <title>Pizzaria Lunamar - CardÃ¡pio</title>
     <!--====== Favicon Icon ======-->
     <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png" />
     <!--====== Google Fonts ======-->
@@ -60,7 +60,7 @@
                                 Urban Bourbon Bliss Ribeye
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="menu-v2.html"><i class="far fa-trash-alt"></i></a>
@@ -70,7 +70,7 @@
                                 Artisanal Truffle Tango Sirloin
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="menu-v2.html"><i class="far fa-trash-alt"></i></a>
@@ -80,7 +80,7 @@
                                 Smoked Paprika Perfection
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="menu-v2.html"><i class="far fa-trash-alt"></i></a>
@@ -90,12 +90,12 @@
                                 Tandoori Temptation Tender
 
                             </a>
-                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
                         </li>
                     </ul>
                     <div class="cart-mini-total">
                         <div class="cart-total">
-                            <span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span
+                            <span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span
                                         class="currency">$</span>940.00</span></span>
                         </div>
                     </div>
@@ -132,9 +132,9 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">Início</a>
+                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
                                     </li>
-                                    <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
+                                    <li class="menu-item has-children"><a href="menu-v2.html">CardÃ¡pio</a>
                                         <!-- <ul class="sub-menu"> -->
                                         <!-- <li><a href="menu-v1.html">Menu List One</a></li> -->
                                         <!-- <li><a href="menu-v2.html">Menu List Two</a></li> -->
@@ -144,8 +144,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nós</a></li>
-                                            <li><a href="history.html">Nossa História</a></li>
+                                            <li><a href="about.html">Sobre nÃ³s</a></li>
+                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -197,10 +197,10 @@
                     <div class="col-lg-12">
                         <!--=== Page Banner Content ===-->
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Nosso Cardápio</h1>
+                            <h1 class="page-title">Nosso CardÃ¡pio</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">Início</a></li>
-                                <li class="active">Cardápio</li>
+                                <li><a href="index.html">InÃ­cio</a></li>
+                                <li class="active">CardÃ¡pio</li>
                             </ul>
                         </div>
                     </div>
@@ -627,13 +627,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Links rápidos</h4>
+                                <h4 class="widget-title">Links rÃ¡pidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">Cardápio</a></li>
-                                    <li><a href="index.html">Sobre</a></li>
-                                    <li><a href="index.html">Galeria</a></li>
-                                    <li><a href="index.html">Contato</a></li>
+                                    <li><a href="index.html">CardÃ¡pio</a></li>
+                                    <li><a href="about.html">Sobre</a></li>
+                                    <li><a href="gallery.html">Galeria</a></li>
+                                    <li><a href="contact.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -642,11 +642,11 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Horários de atendimento</h4>
+                                <h4 class="widget-title">HorÃ¡rios de atendimento</h4>
                                 <ul class="opening-schedule">
                                     <li>Domingo<span>: 06.00pm - 12.00am </span></li>
                                     <li>Segunda: <span class="of-close"> Fechado </span></li>
-                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
+                                    <li>TerÃ§a<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quarta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quinta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
@@ -661,7 +661,7 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
+                    <p>Â© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
@@ -694,3 +694,4 @@
 </body>
 
 </html>
+
