--- a/history.html
+++ b/history.html
@@ -133,7 +133,7 @@
                                 <ul>
                                     <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
                                     </li>
-                                    <li class="menu-item has-children"><a href="menu-v2.html">CardÃ¡pio</a>
+                                    <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
                                         <!-- <li><a href="menu-v1.html">Menu List One</a></li> -->
                                         <!-- <li><a href="menu-v2.html">Menu List Two</a></li> -->
@@ -376,7 +376,7 @@
                                 <h4 class="widget-title">Links rÃ¡pidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">CardÃ¡pio</a></li>
+                                    <li><a href="index.html">Cardápio</a></li>
                                     <li><a href="about.html">Sobre</a></li>
                                     <li><a href="gallery.html">Galeria</a></li>
                                     <li><a href="contact.html">Contato</a></li>
