--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <ul>
                                     <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
                                     </li>
-                                    <li class="menu-item has-children"><a href="menu-v2.html">CardÃ¡pio</a>
+                                    <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
                                         <!-- <li><a href="menu-v1.html">Menu List One</a></li> -->
                                         <!-- <li><a href="menu-v2.html">Menu List Two</a></li> -->
@@ -231,7 +231,7 @@
                 <div class="col-lg-12">
                     <!--== Section Title ===-->
                     <div class="section-title text-center mb-55 wow fadeInDown">
-                        <span class="sub-title"><i class="fas fa-utensils"></i>Nosso CardÃ¡pio</span>
+                        <span class="sub-title"><i class="fas fa-utensils"></i>Nosso Cardápio</span>
                         <h2>ComeÃ§e seu pedido<br />Por aqui!</h2>
                     </div>
                 </div>
@@ -702,7 +702,7 @@
                             </div>
                         </div>
                         <div class="about-button wow fadeInUp">
-                            <a class="theme-btn style-one" href="menu-v2.html">Acessar cardÃ¡pio</a>
+                            <a class="theme-btn style-one" href="menu-v2.html">Acessar Cardápio</a>
                         </div>
                     </div>
                 </div>
@@ -1107,7 +1107,7 @@
                                 <h4 class="widget-title">Links rÃ¡pidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">CardÃ¡pio</a></li>
+                                    <li><a href="index.html">Cardápio</a></li>
                                     <li><a href="about.html">Sobre</a></li>
                                     <li><a href="gallery.html">Galeria</a></li>
                                     <li><a href="contact.html">Contato</a></li>
