--- a/menu-v2.html
+++ b/menu-v2.html
@@ -9,7 +9,7 @@
     <meta content="Insurance, Health, Agency" name="description" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
     <!--====== Title ======-->
-    <title>Pizzaria Lunamar - CardÃ¡pio</title>
+    <title>Pizzaria Lunamar - Cardápio</title>
     <!--====== Favicon Icon ======-->
     <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png" />
     <!--====== Google Fonts ======-->
@@ -134,7 +134,7 @@
                                 <ul>
                                     <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
                                     </li>
-                                    <li class="menu-item has-children"><a href="menu-v2.html">CardÃ¡pio</a>
+                                    <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
                                         <!-- <li><a href="menu-v1.html">Menu List One</a></li> -->
                                         <!-- <li><a href="menu-v2.html">Menu List Two</a></li> -->
@@ -197,10 +197,10 @@
                     <div class="col-lg-12">
                         <!--=== Page Banner Content ===-->
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Nosso CardÃ¡pio</h1>
+                            <h1 class="page-title">Nosso Cardápio</h1>
                             <ul class="breadcrumb-link">
                                 <li><a href="index.html">InÃ­cio</a></li>
-                                <li class="active">CardÃ¡pio</li>
+                                <li class="active">Cardápio</li>
                             </ul>
                         </div>
                     </div>
@@ -630,7 +630,7 @@
                                 <h4 class="widget-title">Links rÃ¡pidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="index.html">CardÃ¡pio</a></li>
+                                    <li><a href="index.html">Cardápio</a></li>
                                     <li><a href="about.html">Sobre</a></li>
                                     <li><a href="gallery.html">Galeria</a></li>
                                     <li><a href="contact.html">Contato</a></li>
