--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                 Urban Bourbon Bliss Ribeye
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="about.html"><i class="far fa-trash-alt"></i></a>
@@ -70,7 +70,7 @@
                                 Artisanal Truffle Tango Sirloin
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="about.html"><i class="far fa-trash-alt"></i></a>
@@ -80,7 +80,7 @@
                                 Smoked Paprika Perfection
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="about.html"><i class="far fa-trash-alt"></i></a>
@@ -90,12 +90,12 @@
                                 Tandoori Temptation Tender
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                     </ul>
                     <div class="cart-mini-total">
                         <div class="cart-total">
-                            <span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span
+                            <span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span
                                         class="currency">$</span>940.00</span></span>
                         </div>
                     </div>
@@ -215,17 +215,17 @@
                         <!--=== Text Box ===-->
                         <div class="text-box mb-50 wow fadeInLeft">
                             <h3>Desde 1999 servindo a melhor pizza de Caraguatatuba. Mais de 60 sabores, ingredientes
-                                frescos e o carinho que vocÃª sente em cada fatia.</h3>
+                                frescos e o carinho que você sente em cada fatia.</h3>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <!--=== Text Box ===-->
                         <div class="text-box mb-50 wow fadeInRight">
                             <p>A Lunamar nasceu do sonho de oferecer pizzas artesanais com ingredientes selecionados e
-                                sabor que conquista famÃ­lias inteiras em Caraguatatuba. Em 2013, fomos campeÃ£s na 8Âª
-                                ediÃ§Ã£o do Festival GastronÃ´mico CaraguÃ¡ a Gosto â€“ um marco que reforÃ§a nosso compromisso
-                                diÃ¡rio com qualidade. Hoje, com rodÃ­zio famoso, ambiente acolhedor, mÃºsica ao vivo e
-                                espaÃ§o kids, continuamos sendo referÃªncia na cidade: quem prova, vira cliente fiel.</p>
+                                sabor que conquista famílias inteiras em Caraguatatuba. Em 2013, fomos campeãs na 8ª
+                                edição do Festival Gastronômico Caraguá a Gosto – um marco que reforça nosso compromisso
+                                diário com qualidade. Hoje, com rodízio famoso, ambiente acolhedor, música ao vivo e
+                                espaço kids, continuamos sendo referência na cidade: quem prova, vira cliente fiel.</p>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                     <div class="col-lg-12">
                         <!--=== Section Title ===-->
                         <div class="section-title text-center mb-50 wow fadeInDown">
-                            <span class="sub-title"><i class="fas fa-star"></i>Quem jÃ¡ provou, aprova!</span>
+                            <span class="sub-title"><i class="fas fa-star"></i>Quem já provou, aprova!</span>
                             <h2>O que nossos clientes dizem</h2>
                         </div>
                     </div>
@@ -338,8 +338,8 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
-                            <p>Lugar perfeito, comida perfeita, serviÃ§o perfeito. Meu pedido chegou sem erros, o que Ã©
-                                incomum, jÃ¡ que geralmente erram minhas pizzas porque sou vegetariana. Com certeza
+                            <p>Lugar perfeito, comida perfeita, serviço perfeito. Meu pedido chegou sem erros, o que é
+                                incomum, já que geralmente erram minhas pizzas porque sou vegetariana. Com certeza
                                 voltarei, recomendo muito!</p>
                             <div class="author-quote-item d-flex">
                                 <div class="author-thumb-item d-flex">
@@ -367,8 +367,8 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
-                            <p>Estive lÃ¡ com minha esposa em 6 de setembro de 2025. Fomos atendidos pelo garÃ§om Teddy,
-                                que foi super atencioso. AliÃ¡s, nÃ£o sÃ³ ele, mas todos. Podem ir sem medo, a pizza Ã©
+                            <p>Estive lá com minha esposa em 6 de setembro de 2025. Fomos atendidos pelo garçom Teddy,
+                                que foi super atencioso. Aliás, não só ele, mas todos. Podem ir sem medo, a pizza é
                                 maravilhosa, comemos bacon e margherita.</p>
                             <div class="author-quote-item d-flex">
                                 <div class="author-thumb-item d-flex">
@@ -397,7 +397,7 @@
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
                             <p>Fui com meu marido fora de temporada e em um dia de semana. Comemos uma pizza, que estava
-                                muito saborosa. O garÃ§om nos serviu cada fatia o tempo todo. Eles foram muito atenciosos
+                                muito saborosa. O garçom nos serviu cada fatia o tempo todo. Eles foram muito atenciosos
                                 e prestativos.</p>
                             <div class="author-quote-item d-flex">
                                 <div class="author-thumb-item d-flex">
@@ -477,13 +477,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Links rÃ¡pidos</h4>
+                                <h4 class="widget-title">Links rápidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="index.html">Cardápio</a></li>
-                                    <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="gallery.html">Galeria</a></li>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="index.html">Sobre</a></li>
+                                    <li><a href="index.html">Galeria</a></li>
+                                    <li><a href="index.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -492,11 +492,11 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">HorÃ¡rios de atendimento</h4>
+                                <h4 class="widget-title">Horários de atendimento</h4>
                                 <ul class="opening-schedule">
                                     <li>Domingo<span>: 06.00pm - 12.00am </span></li>
                                     <li>Segunda: <span class="of-close"> Fechado </span></li>
-                                    <li>TerÃ§a<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quarta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quinta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
@@ -511,7 +511,7 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>Â© <span id="year"></span> Lunamar todos os direitos reservados</p>
+                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
@@ -544,4 +544,3 @@
 </body>
 
 </html>
-
