--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                                 Urban Bourbon Bliss Ribeye
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="contact.html"><i class="far fa-trash-alt"></i></a>
@@ -70,7 +70,7 @@
                                 Artisanal Truffle Tango Sirloin
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="contact.html"><i class="far fa-trash-alt"></i></a>
@@ -80,7 +80,7 @@
                                 Smoked Paprika Perfection
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="contact.html"><i class="far fa-trash-alt"></i></a>
@@ -90,12 +90,12 @@
                                 Tandoori Temptation Tender
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                     </ul>
                     <div class="cart-mini-total">
                         <div class="cart-total">
-                            <span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span
+                            <span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span
                                         class="currency">$</span>940.00</span></span>
                         </div>
                     </div>
@@ -387,13 +387,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Links rÃ¡pidos</h4>
+                                <h4 class="widget-title">Links rápidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="index.html">Cardápio</a></li>
-                                    <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="gallery.html">Galeria</a></li>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="index.html">Sobre</a></li>
+                                    <li><a href="index.html">Galeria</a></li>
+                                    <li><a href="index.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -402,11 +402,11 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">HorÃ¡rios de atendimento</h4>
+                                <h4 class="widget-title">Horários de atendimento</h4>
                                 <ul class="opening-schedule">
                                     <li>Domingo<span>: 06.00pm - 12.00am </span></li>
                                     <li>Segunda: <span class="of-close"> Fechado </span></li>
-                                    <li>TerÃ§a<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quarta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quinta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
@@ -421,7 +421,7 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>Â© <span id="year"></span> Lunamar todos os direitos reservados</p>
+                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
@@ -454,4 +454,3 @@
 </body>
 
 </html>
-
