--- a/history.html
+++ b/history.html
@@ -60,7 +60,7 @@
                                 Urban Bourbon Bliss Ribeye
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="history.html"><i class="far fa-trash-alt"></i></a>
@@ -70,7 +70,7 @@
                                 Artisanal Truffle Tango Sirloin
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="history.html"><i class="far fa-trash-alt"></i></a>
@@ -80,7 +80,7 @@
                                 Smoked Paprika Perfection
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                         <li class="foodix-menu-cart">
                             <a class="remove-cart" href="history.html"><i class="far fa-trash-alt"></i></a>
@@ -90,12 +90,12 @@
                                 Tandoori Temptation Tender
 
                             </a>
-                            <span class="quantity">1 Ã— <span><span class="currency">$</span>940.00</span></span>
+                            <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
                         </li>
                     </ul>
                     <div class="cart-mini-total">
                         <div class="cart-total">
-                            <span><strong>Subtotal:</strong></span> <span class="amount">1 Ã— <span><span
+                            <span><strong>Subtotal:</strong></span> <span class="amount">1 × <span><span
                                         class="currency">$</span>940.00</span></span>
                         </div>
                     </div>
@@ -217,12 +217,12 @@
                         <div class="section-content-box mb-50">
                             <div class="section-title section-title-left wow fadeInDown mb-20">
                                 <span class="sub-title">Nossa História</span>
-                                <h2>HÃ¡ 27 anos Encantendo <br />
+                                <h2>Há 27 anos Encantendo <br />
 
                                     paladares</h2>
                             </div>
-                            <p>Fundada em 14 de junho de 1999, a Lunamar comeÃ§ou como um sonho simples: oferecer pizzas artesanais com ingredientes frescos e sabor que une famÃ­lias em Caraguatatuba.</p>
-                            <p>Em 2013, fomos campeÃ£s da 8Âª ediÃ§Ã£o do Festival GastronÃ´mico CaraguÃ¡ a Gosto â€“ um reconhecimento que celebramos atÃ© hoje, mantendo a tradiÃ§Ã£o de mais de 60 sabores, rodÃ­zio completo e o carinho que transforma cada visita em um momento especial.</p>
+                            <p>Fundada em 14 de junho de 1999, a Lunamar começou como um sonho simples: oferecer pizzas artesanais com ingredientes frescos e sabor que une famílias em Caraguatatuba.</p>
+                            <p>Em 2013, fomos campeãs da 8ª edição do Festival Gastronômico Caraguá a Gosto – um reconhecimento que celebramos até hoje, mantendo a tradição de mais de 60 sabores, rodízio completo e o carinho que transforma cada visita em um momento especial.</p>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="history-img mb-30 wow fadeInUp">
@@ -251,17 +251,17 @@
                         <!--===  Section Content Box  ===-->
                         <div class="section-content-box wow fadeInLeft">
                             <div class="section-title section-title-left mb-30">
-                                <span class="sub-title">Fundada com paixÃ£o</span>
+                                <span class="sub-title">Fundada com paixão</span>
                                 <h2>1999</h2>
                             </div>
-                            <p>Em 14 de junho de 1999, a Lunamar abriu as portas em Caraguatatuba com uma missÃ£o clara: fazer pizza artesanal que unisse famÃ­lias e trouxesse alegria Ã  mesa.</p>
+                            <p>Em 14 de junho de 1999, a Lunamar abriu as portas em Caraguatatuba com uma missão clara: fazer pizza artesanal que unisse famílias e trouxesse alegria à mesa.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <!--===  section image box  ===-->
                         <div class="section-image-box wow fadeInRight">
                             <div class="text-box mb-45">
-                                <p>Desde o primeiro forno ligado, o foco foi ingrediente fresco, massa leve e sabor que fica na memÃ³ria. O que comeÃ§ou pequeno hoje Ã© referÃªncia na cidade.</p>
+                                <p>Desde o primeiro forno ligado, o foco foi ingrediente fresco, massa leve e sabor que fica na memória. O que começou pequeno hoje é referência na cidade.</p>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
@@ -285,17 +285,17 @@
                     <div class="col-lg-6">
                         <div class="section-content-box wow fadeInLeft">
                             <div class="section-title section-title-left">
-                                <span class="sub-title">CampeÃ£ do festival</span>
+                                <span class="sub-title">Campeã do festival</span>
                                 <h2>2013</h2>
                             </div>
-                            <p>Em 2013 a Lunamar conquistou o 1Âº lugar na 8Âª ediÃ§Ã£o do Festival GastronÃ´mico CaraguÃ¡ a Gosto, consolidando seu lugar como referÃªncia em pizzas artesanais na cidade.</p>
+                            <p>Em 2013 a Lunamar conquistou o 1º lugar na 8ª edição do Festival Gastronômico Caraguá a Gosto, consolidando seu lugar como referência em pizzas artesanais na cidade.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <!--===  Section Image Box  ===-->
                         <div class="section-image-box wow fadeInRight">
                             <div class="text-box mb-45">
-                                <p>O prÃªmio veio do carinho do pÃºblico e da qualidade que mantemos atÃ© hoje: ingredientes frescos, massa leve e mais de 60 sabores que fazem cada fatia ser especial.</p>
+                                <p>O prêmio veio do carinho do público e da qualidade que mantemos até hoje: ingredientes frescos, massa leve e mais de 60 sabores que fazem cada fatia ser especial.</p>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
@@ -373,13 +373,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Links rÃ¡pidos</h4>
+                                <h4 class="widget-title">Links rápidos</h4>
                                 <ul class="widget-menu">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="index.html">Cardápio</a></li>
-                                    <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="gallery.html">Galeria</a></li>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="index.html">Sobre</a></li>
+                                    <li><a href="index.html">Galeria</a></li>
+                                    <li><a href="index.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -388,11 +388,11 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">HorÃ¡rios de atendimento</h4>
+                                <h4 class="widget-title">Horários de atendimento</h4>
                                 <ul class="opening-schedule">
                                     <li>Domingo<span>: 06.00pm - 12.00am </span></li>
                                     <li>Segunda: <span class="of-close"> Fechado </span></li>
-                                    <li>TerÃ§a<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quarta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Quinta<span>: 06.00pm - 12.00am </span></li>
                                     <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
@@ -407,7 +407,7 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>Â© <span id="year"></span> Lunamar todos os direitos reservados</p>
+                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
@@ -438,4 +438,3 @@
 </body>
 
 </html>
-
